- phoromatic: Scroll bar on local suites page condensing
- phoromatic: Add "End Ticket" option to benchmark page
- phoromatic: Allow stress tests up to 90 days
- phoromatic: Allow stress runs up to 24 concurrent tests
- phoromatic: Add basic support for annotating/commenting on result files and individual graphs

Phoronix Test Suite Milestone 4
25 February 2015

- pts-core: Improvements to phoronix-test-suite make-download-cache
- phoromatic: Add "admin data" page to let the rootadmin permanently delete schedules/results/systems
- phoromatic: Allow for system identifier variable in benchmark tickets of .SYSTEM
- phoromatic: Allow for system identifier variable in benchmark tickets of .GROUP
- phoromatic: Allow tickets to be removed from the individual benchmark page
- phoromatic: Allow creating new group accounts from the rootadmin page
- phoromatic: Add support for repeating tickets
- phoromatic: Add basic support for system variables

Phoronix Test Suite 5.6 Milestone 3
15 February 2015

- phoromatic: Allow triggers to be deleted
- phoromatic: Rely on caching for determining pre-existing cached test profiles from the web UI
- phoromatic: Add result RSS support
- phoromatic: Add new option to results page
- phoromatic: Enforce new PTS sign-on whenever the PTS core version changes due to potential interface changes
- phoromatic: Working build suite page
- phoromatic: Add support for local suites page
- phoromatic: Add benchmark page
- phoromatic: Add support for viewing issued benchmark tickets
- phoromatic: Add option to force rebuild of results databases
- phoromatic: Prepend system ID to result string when running multiple tests without variables
- phoromatic: Add "Test All Options" opton to build suite page

Phoronix Test Suite 5.6 Milestone 2
4 February 2015

- pts-core: Various fixes
- pts-core: Deb/RPM build packaging improvements.
- pts-core: Add Markdown Readme file